started and nearly finished basic blog left     results page     side bar band links

--- a/resources/css/base/reset.less
+++ b/resources/css/base/reset.less
@@ -4,13 +4,13 @@
     box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6, p, blockquote, button{
+h1, h2, h3, h4, h5, h6, p, blockquote, button, figure{
     margin: 0;
     padding: 0;
 }
 
 article,footer,header,hgroup,
-nav,section,blockquote,main{
+nav,section,blockquote,main,figure{
     display:block;
 }
 
