--- a/resources/css/base/variables/colour.less
+++ b/resources/css/base/variables/colour.less
@@ -6,6 +6,14 @@
 //== Colors ==//
 //app colours
 
+//blog colors
+@blog-color-light: 				#999;
+@blog-color-dark: 				#666;
+@blog-sidebar-background: 		#ededed;
+
+@sidebar-light: 				#888;
+@sidebar-dark: 					#666;
+
 //base colours
 @body-bg: 				        #fff;
 @text-color: 			        #000;
