--- a/resources/css/elements/body.less
+++ b/resources/css/elements/body.less
@@ -7,4 +7,5 @@ body {
     line-height: @line-height;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
 }
