--- a/resources/css/elements/type.less
+++ b/resources/css/elements/type.less
@@ -47,17 +47,17 @@
     }
 }
 
-.variable-font-size();
+.variable-font-size(@minor-third);
 
-@media (min-width: @sm-min) {
-    .variable-font-size(@major-third);
-}
-@media (min-width: @md-min) {
-    .variable-font-size(@perfect-fourth);
-}
-@media (min-width: @lg-min) {
-    .variable-font-size(@perfect-fifth);
-}
+// @media (min-width: @sm-min) {
+//     .variable-font-size(@major-third);
+// }
+// @media (min-width: @md-min) {
+//     .variable-font-size(@perfect-fourth);
+// }
+// @media (min-width: @lg-min) {
+//     .variable-font-size(@perfect-fifth);
+// }
 
 // Headings
 // -------------------------
