--- a/resources/css/main.less
+++ b/resources/css/main.less
@@ -24,8 +24,18 @@
 @import "elements/hr";
 @import "elements/buttons";
 @import "elements/table"; 
+@import "elements/figure";
+@import "elements/image";
 
 //forms
 @import "forms/form";
 
-//modules
+//blog
+@import "modules/blog/blog";
+@import "modules/blog/blog__meta";
+@import "modules/blog/sidebar";
+@import "modules/blog/sidebar-bands";
+@import "modules/blog/previous-posts";
+
+
+@import "modules/grid";
