--- a/resources/css/base/mixins/grid_mixins.less
+++ b/resources/css/base/mixins/grid_mixins.less
@@ -52,6 +52,7 @@
 .base-column(@gutterType: @default-gutterType){
 	@gridWidth: 100%;
 	#column-helpers.getWidthType(@gutterType);
+	@rules();
 }
 
 .base-column-m(){
@@ -59,6 +60,7 @@
 	@gutterType: margin;
 	.gutter(@column-gutter-half, none, @gutterType);
 	#column-helpers.getWidthType(@gutterType);
+	@rules();
 }
 
 .base-column-p(){
@@ -66,6 +68,7 @@
 	@gutterType: padding;
 	.gutter(@column-gutter-half, none, @gutterType);
 	#column-helpers.getWidthType(@gutterType);
+	@rules();
 }
 
 .column(@columns: @max-columns, @breakpoint: @default-breakpoint, @gutterType: @default-gutterType){
