--- a/resources/css/styleguide.css
+++ b/resources/css/styleguide.css
@@ -49,7 +49,7 @@
   color: #fff;
 }
 .font {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   margin-bottom: 10px;
   font-family: 'Helvetica Neue', 'Roboto', 'helveticaui';
 }
@@ -98,6 +98,8 @@
 }
 .animation {
   width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
   background: #ccc;
   padding: 15px;
   margin-top: 15px;
@@ -135,5 +137,77 @@
   margin-left: 15px;
   margin-right: 15px;
   margin-bottom: 20px;
+}
+.svg-list {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-box;
+  display: -o-box;
+  display: box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-lines: multiple;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -ms-box-lines: multiple;
+  -o-box-lines: multiple;
+  box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  -o-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.svg-item {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-box;
+  display: -o-box;
+  display: box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -ms-box-orient: vertical;
+  -o-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  -o-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-box-align: center;
+  -o-box-align: center;
+  box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  cursor: pointer;
+}
+@media (min-width: 62em) {
+  .svg-item {
+    width: calc(16.66666667%  - 30px);
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+.svg-item--fill {
+  fill: #666;
+}
+.svg-item--stroke {
+  stroke: #666;
 }
 /*# sourceMappingURL=resources/css/styleguide.css.map */
