--- a/resources/css/utility/ratios.less
+++ b/resources/css/utility/ratios.less
@@ -1,9 +1,9 @@
 .ratio{
-	&-21-7,
-	&-16-9,
-	&-4-3,
-	&-3-2,
-	&-1-1{
+	&--21-7,
+	&--16-9,
+	&--4-3,
+	&--3-2,
+	&--1-1{
 		position: relative;
 	    width: 100%;
 	    height: 0;
@@ -13,27 +13,26 @@
 	    	top: 0;
 	    	left: 0;
 	    	width: 100%;
-	    	height: 100%;
 	    }
 	}
 
-	&-21-7{
+	&--21-7{
 		padding-bottom: 33.333334%
 	}
 
-	&-16-9{
+	&--16-9{
 		padding-bottom: 56.25%;
 	}
 
-	&-4-3{
+	&--4-3{
 		padding-bottom: 75%;
 	}
 
-	&-3-2{
+	&--3-2{
 		padding-bottom: 66.666667%
 	}
 
-	&-1-1{
+	&--1-1{
 		padding-bottom: 100%;
 	}
 }
