--- a/components/blog/layout_details.html
+++ b/components/blog/layout_details.html
@@ -41,13 +41,5 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis recusandae rerum facere consectetur neque dolorum accusantium. Cupiditate dolorum, perspiciatis voluptate esse numquam, eveniet quis aut illo, quo labore laboriosam quod.</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis recusandae rerum facere consectetur neque dolorum accusantium. Cupiditate dolorum, perspiciatis voluptate esse numquam, eveniet quis aut illo, quo labore laboriosam quod.</p>
 	</article>
-	<aside class="blog__sidebar blog__sidebar--has-background hide-max-sm">
-		<div class="blog__sidebar-background"></div>
-		<div class="blog__sidebar-content">
-
-			{{> blog/previous-posts}}
-			{{> blog/sidebar-bands}}
-
-		</div>
-	</aside>
+	{{> blog/c_sidebar}}
 </main>
