--- a/resources/css/base/variables/colour.less
+++ b/resources/css/base/variables/colour.less
@@ -10,9 +10,11 @@
 @blog-color-light: 				#999;
 @blog-color-dark: 				#666;
 @blog-sidebar-background: 		#ededed;
+@blog-button: 				 	#a2a2a2;
 
 @sidebar-light: 				#888;
 @sidebar-dark: 					#666;
+@sidebar-band: 					#f4f4f4;
 
 //base colours
 @body-bg: 				        #fff;
