--- a/resources/css/elements/links.less
+++ b/resources/css/elements/links.less
@@ -2,9 +2,14 @@
 
 a {
     color: @link-color;
-    transition: .25s;
     &:hover,
     &:focus {
         color: @link-hover-color;
     }
+}
+
+
+a,
+button{
+	.transition(.25s);
 }
