--- a/resources/css/main.less
+++ b/resources/css/main.less
@@ -32,10 +32,12 @@
 
 //blog
 @import "modules/blog/blog";
+@import "modules/blog/results";
 @import "modules/blog/blog__meta";
 @import "modules/blog/sidebar";
 @import "modules/blog/sidebar-bands";
 @import "modules/blog/previous-posts";
+
 
 
 @import "modules/grid";
