--- a/resources/css/modules/blog/blog__meta.less
+++ b/resources/css/modules/blog/blog__meta.less
@@ -26,5 +26,16 @@
 		&--author{
 			color: @blog-color-dark;
 		}
+
+		&-link{
+			text-decoration: none;
+			color: inherit;
+
+			&:hover,
+			&:focus,
+			&:active{
+				text-decoration: underline;
+			}
+		}
 	}
 }
