--- a/resources/css/elements/type.less
+++ b/resources/css/elements/type.less
@@ -112,11 +112,8 @@ strong{
     font-weight: @strong-weight;
 }
 
-h1, .h1, h2, .h2, h3, .h3{
-    & + p{
-        font-weight: bold;
-        &.normal{
-            font-weight: normal;
-        }
-    }
-}
+// span{
+//     &.color{
+//         color: @text-color;
+//     }
+// }
