--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -198,11 +198,15 @@ body {
 }
 a {
   color: #000;
-  transition: .25s;
 }
 a:hover,
 a:focus {
   color: #666;
+}
+a,
+button {
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
 }
 body {
   font-size: 1.6rem;
@@ -461,22 +465,6 @@ pre {
 }
 strong {
   font-weight: 700;
-}
-h1 + p,
-.h1 + p,
-h2 + p,
-.h2 + p,
-h3 + p,
-.h3 + p {
-  font-weight: bold;
-}
-h1 + p.normal,
-.h1 + p.normal,
-h2 + p.normal,
-.h2 + p.normal,
-h3 + p.normal,
-.h3 + p.normal {
-  font-weight: normal;
 }
 ul,
 ol {
@@ -1231,10 +1219,13 @@ table > tbody + tbody {
   }
 }
 .blog__details,
-.blog__sidebar {
+.blog__sidebar,
+.blog__results {
   padding-top: 50px;
+  padding-bottom: 50px;
 }
-.blog__details {
+.blog__details,
+.blog__results {
   width: calc(100%  - 30px);
   margin-left: 15px;
   margin-right: 15px;
@@ -1245,11 +1236,18 @@ table > tbody + tbody {
   flex-grow: 1;
 }
 @media (min-width: 62em) {
-  .blog__details {
+  .blog__details,
+  .blog__results {
     width: calc(58.33333333%  - 30px);
     margin-left: 15px;
     margin-right: 15px;
   }
+}
+.blog__results-title {
+  width: calc(100%  - 30px);
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 40px;
 }
 @media (min-width: 62em) {
   .blog__sidebar {
@@ -1263,20 +1261,104 @@ table > tbody + tbody {
 }
 .blog__sidebar--has-background .blog__sidebar-background {
   position: absolute;
-  z-index: 1;
+  z-index: -1;
   top: 0;
   left: 0;
   background-color: #ededed;
   width: 50vw;
   height: 100%;
 }
-.blog__sidebar--has-background .blog__sidebar-content {
-  position: absolute;
-  z-index: 2;
-  top: 50px;
-  left: 0;
+.results-list__item {
   width: 100%;
-  height: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-box;
+  display: -o-box;
+  display: box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-lines: multiple;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -ms-box-lines: multiple;
+  -o-box-lines: multiple;
+  box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  -o-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-line-pack: start;
+  -webkit-align-content: flex-start;
+  -moz-align-content: flex-start;
+  -o-align-content: flex-start;
+  align-content: flex-start;
+}
+.results-list__item + .results-list__item {
+  margin-top: 30px;
+}
+.results-list__image {
+  width: calc(100%  - 30px);
+  margin-left: 15px;
+  margin-right: 15px;
+}
+@media (min-width: 62em) {
+  .results-list__image {
+    width: calc(16.66666667%  - 30px);
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+@media (max-width: 61.99em) {
+  .results-list__image {
+    margin-bottom: 10px;
+  }
+}
+.results-list__content {
+  width: calc(100%  - 30px);
+  margin-left: 15px;
+  margin-right: 15px;
+  padding-top: 8px;
+}
+@media (min-width: 62em) {
+  .results-list__content {
+    width: calc(83.33333333%  - 30px);
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+.results-list__title {
+  text-decoration: none;
+}
+.results-list__button {
+  display: inline-block;
+  background-color: #a2a2a2;
+  color: #fff;
+  position: relative;
+  padding-left: 5px;
+  padding-right: 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1rem;
+}
+.results-list__button-icon {
+  font-size: 1.5em;
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  -webkit-transform: translate(0, -55%);
+  -ms-transform: translate(0, -55%);
+  transform: translate(0, -55%);
+}
+.results-list__button:hover,
+.results-list__button:focus,
+.results-list__button:active {
+  color: #fff;
+  background-color: #bbbbbb;
 }
 .meta {
   font-size: 1.4rem;
@@ -1299,6 +1381,15 @@ table > tbody + tbody {
 .meta__item--author {
   color: #666;
 }
+.meta__item-link {
+  text-decoration: none;
+  color: inherit;
+}
+.meta__item-link:hover,
+.meta__item-link:focus,
+.meta__item-link:active {
+  text-decoration: underline;
+}
 .sidebar {
   width: calc(100%  - 30px);
   margin-left: 15px;
@@ -1312,6 +1403,7 @@ table > tbody + tbody {
   color: #888;
   font-weight: 700;
   font-size: 1.3rem;
+  text-transform: uppercase;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-box;
@@ -1368,15 +1460,15 @@ table > tbody + tbody {
 }
 .sidebar__item__icon {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 8px;
   width: 22px;
   height: 22px;
   border-radius: 50%;
   background-color: #ededed;
-  -webkit-transform: translate(-50%, 0);
-  -ms-transform: translate(-50%, 0);
-  transform: translate(-50%, 0);
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
 }
 .sidebar__item__icon:before {
   content: '';
@@ -1392,7 +1484,6 @@ table > tbody + tbody {
   background-color: #888;
 }
 .sidebar__item__icon--first {
-  top: 22px;
   width: 33px;
   height: 33px;
 }
@@ -1414,8 +1505,13 @@ table > tbody + tbody {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+.sidebar__bands {
+  font-size: 1.3rem;
+}
 .sidebar__item-btn {
   width: 100%;
+  height: 50px;
+  position: relative;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-box;
@@ -1427,6 +1523,44 @@ table > tbody + tbody {
   display: -ms-flex;
   display: -o-flex;
   display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-box-align: center;
+  -o-box-align: center;
+  box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-line-pack: center;
+  -webkit-align-content: center;
+  -moz-align-content: center;
+  -o-align-content: center;
+  align-content: center;
+  background-color: #f4f4f4;
+  color: #666;
+  margin-top: 15px;
+  padding-left: 87px;
+  padding-right: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.sidebar__item-btn + .sidebar__item-btn {
+  margin-top: 8px;
+}
+.sidebar__item-btn:hover,
+.sidebar__item-btn:focus {
+  background-color: #fcfcfc;
+}
+.sidebar__item-title {
+  font-weight: 700;
+}
+.sidebar__item-count {
+  margin-left: auto;
+  margin-right: 3px;
+  color: #888;
 }
 .previous-post__item {
   border-left: 1px solid #888;
@@ -1448,6 +1582,25 @@ table > tbody + tbody {
 }
 .previous-post__item:last-of-type {
   padding-bottom: 20px;
+}
+.previous-post__item .sidebar__item__icon {
+  top: 0;
+  left: 0;
+  -webkit-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+}
+.previous-post__item .sidebar__item__icon--first {
+  top: 22px;
+}
+.previous-post__item-content {
+  display: block;
+  text-decoration: none;
+}
+.previous-post__item-title:hover,
+.previous-post__item-title:focus,
+.previous-post__item-title:active {
+  color: #666;
 }
 .container {
   margin-left: auto;
