--- a/resources/css/modules/blog/sidebar.less
+++ b/resources/css/modules/blog/sidebar.less
@@ -10,6 +10,7 @@
 		color: @sidebar-light;
 		font-weight: 700;
 		font-size: 1.3rem;
+		text-transform: uppercase;
 
 		.flexbox();
 		.align-items(center);
@@ -44,13 +45,13 @@
 	&__item{
 		&__icon{
 			position: absolute;
-			top: 0;
-			left: 0;
+			top: 50%;
+			left: 8px;
 			width: 22px;
 			height: 22px;
 			border-radius: 50%;
 			background-color: @blog-sidebar-background;
-			.translate(-50%, 0);
+			.translate(0, -50%);
 
 			&:before{
 				content: '';
@@ -65,7 +66,6 @@
 			}
 
 			&--first{
-				top: (40px - 18px);
 				width: 33px;
 				height: 33px;
 
