reset tweaks address element

--- a/resources/css/main.less
+++ b/resources/css/main.less
@@ -26,6 +26,7 @@
 @import "elements/table"; 
 @import "elements/figure";
 @import "elements/image";
+@import "elements/address";
 
 //forms
 @import "forms/form";
