--- a/resources/css/base/reset.less
+++ b/resources/css/base/reset.less
@@ -9,9 +9,20 @@ h1, h2, h3, h4, h5, h6, p, blockquote, button, figure{
     padding: 0;
 }
 
-article,footer,header,hgroup,
-nav,section,blockquote,main,figure{
-    display:block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+main,
+blockquote,
+menu,
+nav,
+section,
+summary {
+  display: block;
 }
 
 /* Responsive images and other embedded objects */
