implemented stylelint cleaned up css based on stylelint converted all css to bem cleaned up gulp file

--- a/components/util/svg-show.html
+++ b/components/util/svg-show.html
@@ -18,8 +18,15 @@
 		<svg><use xlink:href="#filter" /></svg>
 		<div class="svg-name js-svg-name">#filter</div>
 	</div>
+
+	<div class="svg-item svg-item--stroke">
+		<svg><use xlink:href="#select" /></svg>
+		<div class="svg-name js-svg-name">#select</div>
+	</div>
+
+	<div class="svg-item svg-item--stroke">
+		<svg><use xlink:href="#checkbox" /></svg>
+		<div class="svg-name js-svg-name">#checkbox</div>
+	</div>
 </div>
-
-
-
 
