--- a/resources/css/forms/elements/select.less
+++ b/resources/css/forms/elements/select.less
@@ -1,25 +1,40 @@
-&-select{
-    position: relative;
-    select{
-        padding-right: 32px;
-        padding-top: 4px;
-        padding-bottom: 4px;
-        cursor: pointer;
-    }
-    &:after{
-        font-family: @icon-font;
-        content: '\f0d7';
-        position: absolute;
-        right: 12px;
-        top: 50%;
-        .translate(0, -50%);
-        color: @input-color;
-        pointer-events: none;
-    }
-    &__disabled{
-        cursor: not-allowed;
-        &:after{
-            color: @input-disabled-color;
-        }
-    }
+&__select{
+	position: relative;
+	select{
+		padding-right: 32px;
+		padding-top: 4px;
+		padding-bottom: 4px;
+		cursor: pointer;
+	}
+	&-icon,
+	&-no-icon:after{
+		position: absolute;
+		top: 50%;
+		.translate(0, -50%);
+		pointer-events: none;
+	}
+	&-icon{
+		width: 1.2em;
+		height: 90%;
+		fill: @input-color;
+		right: 7px;
+		svg{
+			width: 100%;
+			height: 100%;
+		}
+	}
+	&-no-icon:after{
+		content: '▼';
+		color: @input-color;
+		right: 12px;
+	}
+	&--disabled{
+		cursor: not-allowed;
+	}
+
+	&--disabled &-icon,
+	&--disabled &-no-icon:after{
+		color: @input-disabled-color;
+		fill: @input-disabled-color;
+	}
 }
