--- a/components/util/svgsprite.html
+++ b/components/util/svgsprite.html
@@ -14,5 +14,13 @@
 		<symbol id="filter" viewBox="0 0 24 24">
 			<polygon fill="none" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" points="21,5 14,11 14,20 10,22 10,11 3,5 3,1 21,1 " stroke-linejoin="miter"></polygon>
 		</symbol>
+
+		<symbol id="select" viewBox="0 0 48 48">
+			<path d="M24,33c0.3,0,0.7-0.2,0.8-0.5l10-16c0.2-0.3,0.2-0.7,0-1C34.7,15.2,34.4,15,34,15H14c-0.4,0-0.7,0.2-0.9,0.5 c-0.2,0.3-0.2,0.7,0,1l10,16C23.3,32.8,23.7,33,24,33z"></path>
+		</symbol>
+
+		<symbol id="checkbox" viewBox="0 0 24 24">
+			<polygon points="2,11 4,9 9,12 20,4 22,6 9,19 "></polygon>
+		</symbol> 
 	</svg>
 </div>
