--- a/resources/css/base/animation/keyframes.less
+++ b/resources/css/base/animation/keyframes.less
@@ -1,19 +1,25 @@
-@keyframes slight-flash {
-	from, 50%, to {
+@keyframes slight-flash{
+	from,
+	50%,
+	to{
 		opacity: 1;
 	}
 
-	25%, 75% {
+	25%,
+	75%{
 		opacity: 0.4;
 	}
 }
 
-@-webkit-keyframes slight-flash {
-	from, 50%, to {
+@-webkit-keyframes slight-flash{
+	from,
+	50%,
+	to{
 		opacity: 1;
 	}
 
-	25%, 75% {
+	25%,
+	75%{
 		opacity: 0.4;
 	}
 }
