--- a/resources/css/base/mixins/grid_mixins.less
+++ b/resources/css/base/mixins/grid_mixins.less
@@ -1,42 +1,46 @@
+/* stylelint-disable at-rule-name-case, selector-combinator-space-after, block-no-empty, block-closing-brace-newline-before */
 //==========
 // Container
 //==========
 
 .container(@fluid: none, @gutterType: @default-gutterType) when (@fluid = fluid){
 	#container-helpers.basic-container();
-    @media (min-width: @container-gutter-breakpoint){
-        padding-left:  @fluid-gutter;
-        padding-right: @fluid-gutter;
-    }
+
+	@media (min-width: @container-gutter-breakpoint){
+		padding-left: @fluid-gutter;
+		padding-right: @fluid-gutter;
+	}
 }
 
 .container(@fluid: none, @gutterType: @default-gutterType) when (@fluid = fluid) and (@gutterType = pullin){
 	#container-helpers.basic-container();
-    @media (min-width: @container-gutter-breakpoint){
-        padding-left:  @fluid-pull-in-gutter;
-        padding-right: @fluid-pull-in-gutter;
-    }
+
+	@media (min-width: @container-gutter-breakpoint){
+		padding-left: @fluid-pull-in-gutter;
+		padding-right: @fluid-pull-in-gutter;
+	}
 }
 
 .container(@fluid: none, @gutterType: @default-gutterType) when (default()){
 	#container-helpers.basic-container();
 	max-width: @max-container-width;
-    @media (min-width: @container-gutter-breakpoint){
-        padding-left:  @gutter;
-        padding-right: @gutter;
-    }
+
+	@media (min-width: @container-gutter-breakpoint){
+		padding-left: @gutter;
+		padding-right: @gutter;
+	}
 }
 
 .nested-container(){
-    #container-helpers.nested-container();
+	#container-helpers.nested-container();
 }
 
 #container-helpers{
 	.nested-container(){
 		width: 100%;
-	    .flexbox();
-	    .flex-wrap(wrap);
-	    .align-content(start);
+		.flexbox();
+		.flex-wrap(wrap);
+		.align-content(start);
 	}
 
 	.basic-container(){
@@ -53,6 +57,7 @@
 	@gridWidth: 100%;
 	.gutter(@gutterSize, none, @gutterType);
 	#column-helpers.getWidthType(@gutterType);
+
 	@rules();
 }
 
@@ -67,6 +72,7 @@
 	@gutterType: margin;
 	.gutter(@column-gutter-half, none, @gutterType);
 	#column-helpers.getWidthType(@gutterType);
+
 	@rules();
 }
 
@@ -75,6 +81,7 @@
 	@gutterType: padding;
 	.gutter(@column-gutter-half, none, @gutterType);
 	#column-helpers.getWidthType(@gutterType);
+
 	@rules();
 }
 
@@ -83,8 +90,8 @@
 	#column-helpers.getColumnWidth(@columns, @breakpoint, @gutterType);
 }
 
-.column-nogutter(@columns: @max-columns, @breakpoint: @default-breakpoint, @gutterType: @default-gutterType){
-	#column-helpers.getColumnWidth-nogutter(@columns, @breakpoint, @gutterType);
+.column-nogutter(@columns: @max-columns, @breakpoint: @default-breakpoint){
+	#column-helpers.getColumnWidth-nogutter(@columns, @breakpoint, padding);
 }
 
 .column-push(@columns: @max-columns, @breakpoint: @default-breakpoint, @gutterType: @default-gutterType, @pushColumns: 1, @gutterSize: @column-gutter-half){
@@ -104,20 +111,22 @@
 	.column(@columns, @breakpoint, @gutterType);
 }
 
-
 #column-helpers{
 	.getColumnWidth(@columns, @breakpoint, @gutterType) when (@breakpoint = none){
 		.cacluateWidth(@columns);
 		.getWidthType(@gutterType);
+
 		@rules();
 	}
 
 	.getColumnWidth(@columns, @breakpoint, @gutterType) when (default()){
 		.getBreakpoint(@breakpoint);
 		.getBreakpointRules(@breakpoint);
+
 		@media(min-width: @breakpointValue){
 			.cacluateWidth(@columns);
 			.getWidthType(@gutterType);
+
 			@breakpointExtraRules();
 		}
 	}
@@ -129,12 +138,12 @@
 
 	.getColumnWidth-nogutter(@columns, @breakpoint, @gutterType) when (default()){
 		.getBreakpoint(@breakpoint);
+
 		@media(min-width: @breakpointValue){
 			.cacluateWidth(@columns);
 			.getWidthType(@gutterType);
 		}
 	}
-
 
 	.getWidthType(@gutterType) when (@gutterType = padding){
 		width: @gridWidth;
@@ -144,50 +153,47 @@
 		width: calc(@gridWidth ~" -" @column-gutter-calc-size);
 	}
 
-
-
 	.cacluateWidth(@columns) when (@columns >= @max-columns){
-        @gridWidth: 100%;
-    }
-    .cacluateWidth(@columns) when (@columns < 1){
-        @gridWidth: percentage( 1 / @max-columns );
-    }
-    .cacluateWidth(@columns) when (default()){
-        @gridWidth: percentage( @columns / @max-columns );
-    }
-
+		@gridWidth: 100%;
+	}
+	.cacluateWidth(@columns) when (@columns < 1){
+		@gridWidth: percentage(1 / @max-columns);
+	}
+	.cacluateWidth(@columns) when (default()){
+		@gridWidth: percentage(@columns / @max-columns);
+	}
 
 	.getBreakpoint(@breakpoint) when (@breakpoint = xs){
-        @breakpointValue: @xs-min;
-    }
-    .getBreakpoint(@breakpoint) when (@breakpoint = sm){
-        @breakpointValue: @sm-min;
-    }
-    .getBreakpoint(@breakpoint) when (@breakpoint = md){
-        @breakpointValue: @md-min;
-    }
-    .getBreakpoint(@breakpoint) when (@breakpoint = lg){
-        @breakpointValue: @lg-min;
-    }
-    .getBreakpoint(@breakpoint) when (@breakpoint = xlg){
-        @breakpointValue: @xlg-min;
-    }
+		@breakpointValue: @xs-min;
+	}
+	.getBreakpoint(@breakpoint) when (@breakpoint = sm){
+		@breakpointValue: @sm-min;
+	}
+	.getBreakpoint(@breakpoint) when (@breakpoint = md){
+		@breakpointValue: @md-min;
+	}
+	.getBreakpoint(@breakpoint) when (@breakpoint = lg){
+		@breakpointValue: @lg-min;
+	}
+	.getBreakpoint(@breakpoint) when (@breakpoint = xlg){
+		@breakpointValue: @xlg-min;
+	}
 
-    .getBreakpointRules(@breakpoint) when (@breakpoint = xs){
-        @breakpointExtraRules: @xs-rules;
-    }
-    .getBreakpointRules(@breakpoint) when (@breakpoint = sm){
-        @breakpointExtraRules: @sm-rules;
-    }
-    .getBreakpointRules(@breakpoint) when (@breakpoint = md){
-        @breakpointExtraRules: @md-rules;
-    }
-    .getBreakpointRules(@breakpoint) when (@breakpoint = lg){
-        @breakpointExtraRules: @lg-rules;
-    }
-    .getBreakpointRules(@breakpoint) when (@breakpoint = xlg){
-        @breakpointExtraRules: @xlg-rules;
-    }
+	.getBreakpointRules(@breakpoint) when (@breakpoint = xs){
+		@breakpointExtraRules: @xs-rules;
+	}
+	.getBreakpointRules(@breakpoint) when (@breakpoint = sm){
+		@breakpointExtraRules: @sm-rules;
+	}
+	.getBreakpointRules(@breakpoint) when (@breakpoint = md){
+		@breakpointExtraRules: @md-rules;
+	}
+	.getBreakpointRules(@breakpoint) when (@breakpoint = lg){
+		@breakpointExtraRules: @lg-rules;
+	}
+	.getBreakpointRules(@breakpoint) when (@breakpoint = xlg){
+		@breakpointExtraRules: @xlg-rules;
+	}
 }
 
 //=========
@@ -220,12 +226,19 @@
 #gutter-helpers{
 	.setGutterRules(@gutter-size-left, @gutter-size-right, @gutterType) when (@gutter-size > 0){
 		.getGutterType(@gutterType);
-		@gutterRules: { @{gutterRuleLeft}: @gutter-size-left; @{gutterRuleRight}: @gutter-size-right; };
+
+		@gutterRules:{
+			@{gutterRuleLeft}: @gutter-size-left;
+			@{gutterRuleRight}: @gutter-size-right;
+		};
+
 	}
 
 	.setGutterRules(@gutter-size-left, @gutter-size-right, @gutterType) when (default()){
 		.getGutterType(@gutterType);
+
 		@gutterRules: {};
+
 	}
 
 	.getGutterType(@gutterType) when (@gutterType = padding){
@@ -239,21 +252,22 @@
 	}
 
 	.setBreakpointRules(@breakpoint) when (@breakpoint = xs){
-        @xs-rules: @gutterRules;
-    }
-    .setBreakpointRules(@breakpoint) when (@breakpoint = sm){
-        @sm-rules: @gutterRules;
-    }
-    .setBreakpointRules(@breakpoint) when (@breakpoint = md){
-        @md-rules: @gutterRules;
-    }
-    .setBreakpointRules(@breakpoint) when (@breakpoint = lg){
-        @lg-rules: @gutterRules;
-    }
-    .setBreakpointRules(@breakpoint) when (@breakpoint = xlg){
-        @xlg-rules: @gutterRules;
-    }
-    .setBreakpointRules(@breakpoint) when (default()){
+		@xs-rules: @gutterRules;
+	}
+	.setBreakpointRules(@breakpoint) when (@breakpoint = sm){
+		@sm-rules: @gutterRules;
+	}
+	.setBreakpointRules(@breakpoint) when (@breakpoint = md){
+		@md-rules: @gutterRules;
+	}
+	.setBreakpointRules(@breakpoint) when (@breakpoint = lg){
+		@lg-rules: @gutterRules;
+	}
+	.setBreakpointRules(@breakpoint) when (@breakpoint = xlg){
+		@xlg-rules: @gutterRules;
+	}
+	.setBreakpointRules(@breakpoint) when (default()){
 		@rules: @gutterRules;
 	}
 }
+/* stylelint-enable */
