--- a/resources/css/base/mixins/mixins.less
+++ b/resources/css/base/mixins/mixins.less
@@ -1,4 +1,4 @@
-//
+/* stylelint-disable media-feature-no-missing-punctuation */
 // Mixins
 // --------------------------------------------------
 
@@ -6,63 +6,72 @@
 // -------------------------
 
 .responsive-font-size(@responsive, @min, @max){
-    @min-breakpoint: ((unit(@min)*10) / unit(@responsive) * 100);
-    @max-breakpoint: ((unit(@max)*10) / unit(@responsive) * 100);
+	@min-breakpoint: ((unit(@min) * 10) / unit(@responsive) * 100);
+	@max-breakpoint: ((unit(@max) * 10) / unit(@responsive) * 100);
 
-    font-size: @responsive;
-    @media (min-width: unit(@max-breakpoint, px)){
-        font-size: unit(@max, rem);
-    }
-    @media (max-width: unit(@min-breakpoint, px)){
-        font-size: unit(@min, rem);
-    }
+	font-size: @responsive;
+
+	@media (min-width: unit(@max-breakpoint, px)){
+		font-size: unit(@max, rem);
+	}
+
+	@media (max-width: unit(@min-breakpoint, px)){
+		font-size: unit(@min, rem);
+	}
 }
 
 .textLinesHeight(@lines){
-    @textLineHeight: @lines * @base-font-size * @line-height;
+	@textLineHeight: @lines * @base-font-size * @line-height;
 }
-
 
 // Utilities
 // -------------------------
 
-.clearfix() {
-    &:before,
-    &:after {
-        content: " "; // 1
-        display: table; // 2
-    }
-    &:after {
-        clear: both;
-    }
+.clearfix(){
+	&:before,
+	&:after{
+		content: " "; // 1
+		display: table; // 2
+	}
+	&:after{
+		clear: both;
+	}
 }
 
 // Placeholder text
-.placeholder(@color: @input-color-placeholder) {
-  &::-moz-placeholder           { color: @color;   // Firefox
-                                  opacity: 1; } // See https://github.com/twbs/bootstrap/pull/11526
-  &:-ms-input-placeholder       { color: @color; } // Internet Explorer 10+
-  &::-webkit-input-placeholder  { color: @color; } // Safari and Chrome
-}
+.placeholder(@color: @input-color-placeholder){
+	&::-moz-placeholder{
+		color: @color;
+		opacity: 1;
+	}
 
+	&:-ms-input-placeholder{
+		color: @color;
+	}
+
+	&::-webkit-input-placeholder{
+		color: @color;
+	}
+}
 
 // CSS3 PROPERTIES
 // --------------------------------------------------
 
 // Single side border-radius
-.border-top-radius(@radius) {
-    border-top-right-radius:    @radius;
-    border-top-left-radius:     @radius;
+.border-top-radius(@radius){
+	border-top-right-radius: @radius;
+	border-top-left-radius: @radius;
 }
-.border-right-radius(@radius) {
-    border-bottom-right-radius: @radius;
-    border-top-right-radius:    @radius;
+.border-right-radius(@radius){
+	border-bottom-right-radius: @radius;
+	border-top-right-radius: @radius;
 }
-.border-bottom-radius(@radius) {
-    border-bottom-right-radius: @radius;
-    border-bottom-left-radius:  @radius;
+.border-bottom-radius(@radius){
+	border-bottom-right-radius: @radius;
+	border-bottom-left-radius: @radius;
 }
-.border-left-radius(@radius) {
-    border-bottom-left-radius:  @radius;
-    border-top-left-radius:     @radius;
+.border-left-radius(@radius){
+	border-bottom-left-radius: @radius;
+	border-top-left-radius: @radius;
 }
+/* stylelint-enable */
