--- a/resources/css/base/mixins/prefixmixins.less
+++ b/resources/css/base/mixins/prefixmixins.less
@@ -1,3 +1,4 @@
+/* stylelint-disable rule-non-nested-empty-line-before */
 //---------------------------------------------------
 //  LESS Prefixer altered
 //---------------------------------------------------
@@ -17,7 +18,7 @@
 //  (*) denotes a syntax-sugar helper
 //  -------------------------------------------------
 //
-//      .animation(@args)
+//     .animation(@args)
 //          .animation-delay(@delay)
 //          .animation-direction(@direction)
 //          .animation-duration(@duration)
@@ -54,133 +55,130 @@
 //
 //---------------------------------------------------
 
-
 // Animation
 
-.animation(@args) {
-    -webkit-animation: @args;
-    animation: @args;
+.animation(@args){
+	-webkit-animation: @args;
+	animation: @args;
 }
-.animation-delay(@delay) {
-    -webkit-animation-delay: @delay;
-    animation-delay: @delay;
+.animation-delay(@delay){
+	-webkit-animation-delay: @delay;
+	animation-delay: @delay;
 }
-.animation-direction(@direction) {
-    -webkit-animation-direction: @direction;
-    -moz-animation-direction: @direction;
-    -ms-animation-direction: @direction;
-    -o-animation-direction: @direction;
+.animation-direction(@direction){
+	-webkit-animation-direction: @direction;
+	-moz-animation-direction: @direction;
+	-ms-animation-direction: @direction;
+	-o-animation-direction: @direction;
 }
-.animation-duration(@duration) {
-    -webkit-animation-duration: @duration;
-    animation-duration: @duration;
+.animation-duration(@duration){
+	-webkit-animation-duration: @duration;
+	animation-duration: @duration;
 }
-.animation-fill-mode(@mode) {
-    -webkit-animation-fill-mode: @mode;
-    animation-fill-mode: @mode;
+.animation-fill-mode(@mode){
+	-webkit-animation-fill-mode: @mode;
+	animation-fill-mode: @mode;
 }
-.animation-iteration-count(@count) {
-    -webkit-animation-iteration-count: @count;
-    animation-iteration-count: @count;
+.animation-iteration-count(@count){
+	-webkit-animation-iteration-count: @count;
+	animation-iteration-count: @count;
 }
-.animation-name(@name) {
-    -webkit-animation-name: @name;
-    animation-name: @name;
+.animation-name(@name){
+	-webkit-animation-name: @name;
+	animation-name: @name;
 }
-.animation-play-state(@state) {
-    -webkit-animation-play-state: @state;
-    animation-play-state: @state;
+.animation-play-state(@state){
+	-webkit-animation-play-state: @state;
+	animation-play-state: @state;
 }
-.animation-timing-function(@function) {
-    -webkit-animation-timing-function: @function;
-    animation-timing-function: @function;
+.animation-timing-function(@function){
+	-webkit-animation-timing-function: @function;
+	animation-timing-function: @function;
 }
-
 
 // Columns
 
-.columns(@args) {
-    -webkit-columns: @args;
-    -moz-columns: @args;
-    columns: @args;
+.columns(@args){
+	-webkit-columns: @args;
+	-moz-columns: @args;
+	columns: @args;
 }
-.column-count(@count) {
-    -webkit-column-count: @count;
-    -moz-column-count: @count;
-    column-count: @count;
+.column-count(@count){
+	-webkit-column-count: @count;
+	-moz-column-count: @count;
+	column-count: @count;
 }
-.column-gap(@gap) {
-    -webkit-column-gap: @gap;
-    -moz-column-gap: @gap;
-    column-gap: @gap;
+.column-gap(@gap){
+	-webkit-column-gap: @gap;
+	-moz-column-gap: @gap;
+	column-gap: @gap;
 }
-.column-width(@width) {
-    -webkit-column-width: @width;
-    -moz-column-width: @width;
-    column-width: @width;
+.column-width(@width){
+	-webkit-column-width: @width;
+	-moz-column-width: @width;
+	column-width: @width;
 }
-.column-rule(@args) {
-    -webkit-column-rule: @args;
-    -moz-column-rule: @args;
-    column-rule: @args;
+.column-rule(@args){
+	-webkit-column-rule: @args;
+	-moz-column-rule: @args;
+	column-rule: @args;
 }
-
 
 // Transforms
 
-.transform(@args) {
-    -webkit-transform: @args;
-    -ms-transform: @args;
-    transform: @args;
+.transform(@args){
+	-webkit-transform: @args;
+	-ms-transform: @args;
+	transform: @args;
 }
-.transform-origin(@args) {
-    -webkit-transform-origin: @args;
-    -ms-transform-origin: @args;
-    transform-origin: @args;
+.transform-origin(@args){
+	-webkit-transform-origin: @args;
+	-ms-transform-origin: @args;
+	transform-origin: @args;
 }
-.transform-style(@style) {
-    -webkit-transform-style: @style;
-    transform-style: @style;
+.transform-style(@style){
+	-webkit-transform-style: @style;
+	transform-style: @style;
 }
 .rotate(@deg:45deg){
-    .transform(rotate(@deg));
+	.transform(rotate(@deg));
 }
 .scale(@factor:.5){
-    .transform(scale(@factor));
+	.transform(scale(@factor));
 }
-.translate(@x,@y){
-    .transform(translate(@x,@y));
+.translate(@x, @y){
+	.transform(translate(@x, @y));
 }
-.translate3d(@x,@y,@z) {
-    .transform(translate3d(@x,@y,@z));
+.translate3d(@x, @y, @z){
+	.transform(translate3d(@x, @y, @z));
 }
-.translateHardware(@x,@y) {
-    .translate(@x,@y);
-    -webkit-transform: translate3d(@x,@y,0);
-    -ms-transform: translate3d(@x,@y,0);
-    transform: translate3d(@x,@y,0);
+.translateHardware(@x, @y){
+	.translate(@x, @y);
+	-webkit-transform: translate3d(@x, @y, 0);
+	-ms-transform: translate3d(@x, @y, 0);
+	transform: translate3d(@x, @y, 0);
 }
-
 
 // Transitions
 
-.transition(@args:200ms) {
-    -webkit-transition: @args;
-    transition: @args;
+.transition(@args: 200ms){
+	-webkit-transition: @args;
+	transition: @args;
 }
-.transition-delay(@delay:0) {
-    -webkit-transition-delay: @delay;
-    transition-delay: @delay;
+.transition-delay(@delay: 0){
+	-webkit-transition-delay: @delay;
+	transition-delay: @delay;
 }
-.transition-duration(@duration:200ms) {
-    -webkit-transition-duration: @duration;
-    transition-duration: @duration;
+.transition-duration(@duration: 200ms){
+	-webkit-transition-duration: @duration;
+	transition-duration: @duration;
 }
-.transition-property(@property:all) {
-    -webkit-transition-property: @property;
-    transition-property: @property;
+.transition-property(@property: all){
+	-webkit-transition-property: @property;
+	transition-property: @property;
 }
-.transition-timing-function(@function:ease) {
-    -webkit-transition-timing-function: @function;
-    transition-timing-function: @function;
+.transition-timing-function(@function: ease){
+	-webkit-transition-timing-function: @function;
+	transition-timing-function: @function;
 }
+/* stylelint-enable */
