--- a/resources/css/elements/lists.less
+++ b/resources/css/elements/lists.less
@@ -1,20 +1,21 @@
-ul, ol{
-    padding: 0;
-    margin: 0 0 @margin-bottom 2.2em;
+ul,
+ol{
+	padding: 0;
+	margin: 0 0 @margin-bottom 2.2em;
 }
 
 ol{
-    list-style:decimal;
+	list-style: decimal;
 }
 
 ul{
-    list-style:disc;
-    ul{
-        list-style:circle;
-    }
+	list-style: disc;
+	ul{
+		list-style: circle;
+	}
 }
 
 li{
-    margin-bottom: 4px;
-    line-height: @p-line-height;
+	margin-bottom: 4px;
+	line-height: @p-line-height;
 }
