--- a/resources/css/elements/quotes.less
+++ b/resources/css/elements/quotes.less
@@ -1,24 +1,26 @@
 // Blockquotes
-blockquote, q{
-    quotes: none;
-    font-style: italic;
-    &:before, &:after{
-        content: none;
-    }
+blockquote,
+q{
+	quotes: none;
+	font-style: italic;
+
+	&:before,
+	&:after{
+		content: none;
+	}
 }
 
 blockquote{
-    padding: 10px 15px;
-    border-left: 4px solid @blockquote-border-color;
-    line-height: @p-line-height;
-    margin-bottom: @margin-bottom;
+	padding: 10px 15px;
+	border-left: 4px solid @blockquote-border-color;
+	line-height: @p-line-height;
+	margin-bottom: @margin-bottom;
 
-    p,
-    ul,
-    ol {
-        &:last-child {
-            margin-bottom: 0;
-        }
-    }
-
+	p,
+	ul,
+	ol{
+		&:last-child{
+			margin-bottom: 0;
+		}
+	}
 }
