--- a/resources/css/utility/ratios.less
+++ b/resources/css/utility/ratios.less
@@ -5,19 +5,19 @@
 	&--3-2,
 	&--1-1{
 		position: relative;
-	    width: 100%;
-	    height: 0;
-	    overflow: hidden;
-	    > *{
-	    	position: absolute;
-	    	top: 0;
-	    	left: 0;
-	    	width: 100%;
-	    }
+		width: 100%;
+		height: 0;
+		overflow: hidden;
+		> *{
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+		}
 	}
 
 	&--21-7{
-		padding-bottom: 33.333334%
+		padding-bottom: 33.333334%;
 	}
 
 	&--16-9{
@@ -29,7 +29,7 @@
 	}
 
 	&--3-2{
-		padding-bottom: 66.666667%
+		padding-bottom: 66.666667%;
 	}
 
 	&--1-1{
